# email-subscriber-rust

./: Cargo.toml  Dockerfile  spec.yaml
.sqlx/: query-e39b2f7c4ef5f40a6e065f34e2d162987edf0145b553c384d1bd6729d2f26154.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240105160858_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
